# kiji-proxy

./: .gitattributes  CONTRIBUTORS.md  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  pyproject.toml
.changeset/: eager-poems-hope.md  humble-buckets-judge.md  slimy-groups-train.md  swift-lions-release.md
.github/: semantic-commit-guide.md
.github/workflows/: README.md  changesets.yml  lint-and-test.yml  release.yml  semantic-pr.yml
chrome-extension/: PRIVACY_POLICY.md  background.js  config.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  styles.css
docs/: 01-getting-started.md  02-development-guide.md  03-building-deployment.md  04-release-management.md  05-advanced-topics.md  06-chrome-extension.md  07-customizing-pii-model.md  README.md
model/dataset/: tokenization.py
model/dataset/huggingface/: import_ai4privacy.py  upload_dataset_to_hf.py  upload_model_to_hf.py
model/flows/: README.md  run_training.sh  training_config.toml  training_pipeline.py
model/quantized/: config.json  crf_transitions.json  label_mappings.json  model.onnx  model_manifest.json  model_quantized.onnx
model/src/: __init__.py  callbacks.py  checkpoint_utils.py  compare_models.py  config.py  eval_model.py  eval_model_detailed.py  model.py  parity_benchmark.py  preprocessing.py  quantitize.py  span_decoder.py  train.py  train_colab.ipynb  trainer.py
src/backend/: main.go
src/backend/config/: config.development.json  config.go  config_test.go
src/backend/paths/: paths.go  paths_test.go
src/backend/pii/: database.go  database_test.go  model_manager.go
src/backend/pii/detectors/: onnx_model_detector.go  onnx_model_detector_integration_test.go  onnx_model_detector_test.go
src/backend/pii/generators/: pii_generators.go  pii_generators_test.go
src/backend/providers/: custom.go  provider.go  provider_test.go  providers_test.go
src/backend/proxy/: handler.go  handler_test.go
src/backend/server/: server.go
src/frontend/: CHANGELOG.md  package.json
src/frontend/src/components/: privacy-proxy-ui.tsx
src/frontend/src/components/modals/: AdvancedSettingsModal.tsx  CACertSetupModal.tsx  SettingsModal.tsx
src/frontend/src/electron/: electron-main.js  electron-preload.js  electron.d.ts
src/frontend/src/hooks/: useElectronSettings.ts  useLogs.ts
src/frontend/src/types/: provider.ts
src/frontend/src/utils/: providerHelpers.ts
src/scripts/: build_dmg.sh  build_linux.sh  sync-manifest-version.js  verify_linux_build.sh
tests/: test_tokenization.py
tests/benchmark/: run.py  smoke_test.py
tests/e2e/: README.md  client.py  detection.py  metrics.py  proxy.py  reporter.py  run.py
tests/e2e/dataset/: README.md  generate.py  samples.jsonl
